--- a/public/index.html
+++ b/public/index.html
@@ -667,6 +667,8 @@
                                 <div class="d-flex align-items-center mb-1">
                                     <h4 class="fw-bold mb-0 me-3">${n.name}</h4>
                                     ${index === 0 ? '<span class="badge bg-warning text-dark">#1</span>' : ''}
+                                    ${index === 1 ? '<span class="badge bg-secondary text-white">#2</span>' : ''}
+                                    ${index === 2 ? '<span class="badge text-white" style="background-color: #cd7f32;">#3</span>' : ''}
                                     ${deleteBtn}
                                 </div>
                                 <div class="progress" style="height: 6px; width: 60%; background-color: rgba(0,0,0,0.05);">
