--- a/public/index.html
+++ b/public/index.html
@@ -774,6 +774,7 @@
             items.sort((a, b) => (a.reserved === b.reserved) ? 0 : a.reserved ? 1 : -1);
 
             items.forEach(item => {
+                const isReserved = item.reserved;
                 const statusBadge = isReserved
                     ? '<span class="badge bg-success mb-2"><i class="bi bi-check-circle"></i> Already taken!</span>'
                     : '<span class="badge bg-light text-secondary mb-2 border">Wish open</span>';
