--- a/public/index.html
+++ b/public/index.html
@@ -1233,6 +1233,11 @@
                         canvas.width = width;
                         canvas.height = height;
                         const ctx = canvas.getContext('2d');
+
+                        // Fill with white background to prevent transparent PNGs from turning black
+                        ctx.fillStyle = '#ffffff';
+                        ctx.fillRect(0, 0, width, height);
+
                         ctx.drawImage(img, 0, 0, width, height);
 
                         // Export as JPEG with 0.7 quality to save space
